Fix navbar z-index

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,6 +4,7 @@
     background: navy;
     width: 100vw;
     top: 0;
+    z-index: 1;
 }
 
 .nav img {
